# errors.rs

./: .gitignore  Cargo.toml  QUICK_START.md  TEST_DOCUMENTATION.md
.github/workflows/: autofix.yaml  changelog.yaml  cross-build.yaml  dependency-review.yml  health.yaml  licenses.yaml  lint.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  test-with-coverage.yaml
crates/errors-cli/: Cargo.toml
crates/errors-cli/src/: errors.rs  main.rs
crates/errors-lib/: Cargo.toml  TODO.md  build.rs
crates/errors-lib/src/: color_eyre.rs  error_stack.rs  human_panic.rs  lib.rs  logging.rs  rootcause.rs
crates/errors-lib/tests/: api_error.rs  general.rs
crates/errors-lib/tests/snapshots/: api_error__snapshot_api_error.snap
