[package]
name = "errors-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error definitions & structure (CLI defines its own error enums)
errors-lib = { path = "../errors-lib" }

# Pretty panic/unhandled error reports
color-eyre = "0.6"

# Structured logging to file + stderr
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
